--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     Probando Git...
     <h1>Segunda modificación 04/05/2023 10:07h</h1>
+    <h2>hola</h2>
+    <h3>Tercera modificación 04/05/2023 10:30h</h3>
 </body>
 </html>
